TASK MANAGEMENT SYSTEM

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="content">
             <div id="content-list">
                 <div id="new-slide">
-                    New Slide
+                   <strong>New Slide</strong> 
                 </div>
                 <div id="slide-list">
                     
@@ -29,13 +29,13 @@
             <div id="content-details">
                 <div id="create-slide">
                     <div>
-                        <input id="txtSlideImage" type="text" placeholder="IMAGE"/>
+                        <input id="txtSlideImage" type="text" placeholder="IMAGE URL"/>
                     </div>
                     <div>
-                        <input id="txtSlideTitle" type="text" placeholder="TITLE"/>
+                        <input id="txtSlideTitle" type="text" placeholder="IMAGE TITLE"/>
                     </div>
                     <div>
-                        <textarea id="txtSlideDesc" cols="30" rows="10" placeholder="DETAILS"></textarea>
+                        <textarea id="txtSlideDesc" cols="30" rows="10" placeholder=" IMAGE DESCRIPTION"></textarea>
                     </div>
                     <div>
                         <button id="btnSaveSlide">Save Slide</button>
